<resources>
    <string name="app_name">Connectivity Demo</string>

    <string name="buttons_content"></string>
    <string name="download_file">Download File</string>
    <string name="upload_file">Upload File</string>
    <string name="load_image">Download Image</string>
    <string name="load_large_image">Download Big Image</string>
    <string name="url_timeout">URL Timeout</string>
    <string name="load_url">Download URL</string>
    <string name="connect_device">[NO DEVICE]</string>
    <string name="connect_status">[NO STATUS]</string>
    <string name="select_device">Select Device</string>
</resources>
