<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="fill_parent">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true">

            <!--
         The primary full-screen view. This can be replaced with whatever view
         is needed to present your content, e.g. VideoView, SurfaceView,
         TextureView, etc.
            -->

            <TextView
                android:id="@+id/fullscreen_content"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:keepScreenOn="true"
                android:text="@string/buttons_content"
                android:textSize="50sp"
                android:textStyle="bold" />

            <!--
         This FrameLayout insets its children based on system windows using
         android:fitsSystemWindows.
            -->

            <LinearLayout
                android:id="@+id/fullscreen_content_controls"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center|center_horizontal"
                android:orientation="vertical"
                android:padding="6sp"
                android:scrollbars="horizontal"
                tools:ignore="UselessParent">

                <TextView
                    android:id="@+id/connected_device"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center|center_horizontal"
                    android:layout_margin="3sp"
                    android:layout_marginTop="0sp"
                    android:text="@string/connect_device"
                    android:textSize="28sp"
                    android:gravity="center_horizontal" />

                <TextView
                    android:id="@+id/hud_connected"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center|center_horizontal"
                    android:layout_margin="3sp"
                    android:layout_marginTop="0sp"
                    android:text="@string/connect_status"
                    android:textSize="28sp"
                    android:gravity="center_horizontal" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/local_web_connected"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center|center_horizontal"
                        android:layout_margin="3sp"
                        android:layout_marginTop="0sp"
                        android:layout_weight="1"
                        android:text="Local Web: OFF"
                        android:textSize="18sp"
                        android:gravity="center_horizontal" />

                    <TextView
                        android:id="@+id/remote_web_connected"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center|center_horizontal"
                        android:layout_margin="3sp"
                        android:layout_marginTop="0sp"
                        android:layout_weight="1"
                        android:text="Remote Web: OFF"
                        android:textSize="18sp"
                        android:gravity="center_horizontal" />
                </LinearLayout>

                <Button
                    android:id="@+id/download_file_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center|center_horizontal"
                    android:layout_margin="3sp"
                    android:layout_marginTop="0sp"
                    android:text="@string/download_file"
                    android:textSize="28sp" />

                <Button
                    android:id="@+id/upload_file_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center|center_horizontal"
                    android:layout_margin="3sp"
                    android:layout_marginTop="0sp"
                    android:text="@string/upload_file"
                    android:textSize="28sp" />

                <Button
                    android:id="@+id/load_image_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center|center_horizontal"
                    android:layout_margin="3sp"
                    android:layout_marginTop="0sp"
                    android:text="@string/load_image"
                    android:textSize="28sp" />


            </LinearLayout>
        </FrameLayout>
    </ScrollView>

</FrameLayout>
